--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "nestia-template",
+    "name": "ne-commerce",
     "version": "0.0.0",
-    "description": "nestia를 적용한 nestjs 서버",
+    "description": "NestJS기반 E-Commerce 프로젝트",
     "main": "build/main",
     "scripts": {
         "check": "ts-patch check",
@@ -34,7 +34,7 @@
     "license": "UNLICENSED",
     "repository": {
         "type": "git",
-        "url": "https://github.com/rojiwon123/nestia-template.git"
+        "url": "https://github.com/rojiwon123/ne-commerce.git"
     },
     "keywords": [
         "nestjs",
@@ -42,8 +42,8 @@
     ],
     "dependencies": {
         "@fxts/core": "^0.23.0",
-        "@nestia/core": "^2.4.2",
-        "@nestia/fetcher": "^2.4.2",
+        "@nestia/core": "^2.4.3",
+        "@nestia/fetcher": "^2.4.3",
         "@nestjs/common": "^10.2.10",
         "@nestjs/core": "^10.2.10",
         "@nestjs/platform-express": "^10.2.10",
@@ -57,7 +57,7 @@
     },
     "devDependencies": {
         "@nestia/e2e": "^0.4.0",
-        "@nestia/sdk": "^2.4.2",
+        "@nestia/sdk": "^2.4.3",
         "@prisma/client": "^5.7.0",
         "@project/api": "file:packages/api",
         "@rojiwon123/prisma-schema-generator": "^0.0.7",
